tests/NormalTests/paczka1/small_fuzzy/35784244.err
Error in line 1: bWdqwGM A602 59,7
Error in line 5: A602 A602 40,98
Error in line 7: ig7 S914 76,0
Error in line 10: A602 S914 57,2
